--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,24 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "GPL-3.0-only" }
 
+[project.optional-dependencies]
+lint = [
+  "autopep8>=2.1.0",
+  "flake8>=7.0.0",
+]
+
 [tool.setuptools.package-dir]
 "" = "src"
 
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["ctestfw*"]
+
+[tool.flake8]
+max-line-length = 79
+extend-exclude = [
+  ".venv",
+  "build",
+  "dist",
+  "__pycache__",
+]
